--- a/super/08-rock-paper.html
+++ b/super/08-rock-paper.html
@@ -86,6 +86,8 @@
       score = {wins:0,ties:0,losses:0}
       };
       
+      - its a falsy value, 
+
       if (!score){
         score = {
           wins:0,
