--- a/super/08-objects.html
+++ b/super/08-objects.html
@@ -227,43 +227,33 @@ const family = {
   const object5 ={
      //firstName:firstName  // we are borrowing the name
 
-
     // if the property and the value are the same you just type it once:
     firstName  
   }
 
   console.log(object5)
 
-  // Shorthand method 
-
+  // Shorthand method
     const object6 ={
-     //firstName:firstName  // we are borrowing the name
-
+     //firstName:firstName  // we are borrowing the nam
 
     // if the property and the value are the same you just type it once:
     firstName, 
-    method: function function1(){
-      console.log("method");
-    }
+   // method: function function1(){
+      //console.log("method");
+    //}
 
+   // The shorthand method
+    // shortcut for the above method. the function name is not needed from the above method. 
     method(){
-      console.log()
+      console.log('method')
     }
 
   };
 
+  // this will run/ output the method in the console. 
   console.log(object6)
   object6.method();
 
-
-
-
-
-  
-
-    
-
-
 </script>
 </html>
-
