--- a/super/08-rock-paper.html
+++ b/super/08-rock-paper.html
@@ -140,7 +140,10 @@
             result =`Its a tie` ; 
             }
 
-        }else if(playerMove===`paper`){
+        }
+        
+        
+        else if(playerMove===`paper`){
           if (computerMove === 'rock'){
             result = 'You win';
             }else if (computerMove === 'paper'){
