--- a/super/08-object-exercise.html
+++ b/super/08-object-exercise.html
@@ -27,7 +27,7 @@
     <br> 
     8h. We'll add localStorage to the calculator project. First, make a copy of the the project
     - whenever we update the calculation, save it using .setitem()
-    -when tehe page first loads, the calculation using .getItem()
+    -when the page first loads, the calculation using .getItem()
     -use a default value of '' if a calculation doesn't exist in local storage
     <br>
 
@@ -39,8 +39,32 @@
 
 </p>
 
-     
+<script>
 
-    
+    /*Math.max(34,45)
+  //console.log(calculation)
+  
+  if (true){
+    console.log("hello")
+  }
+  
+  function addFive(number){
+    let result;
+    if(number%2!==0){
+      result = number +5;
+      return result
+    }else{
+      console.log("number is not divisible by 2")
+    }
+  }
+
+  
+console.log(Math.floor(Math.random()*6)+5);
+
+console.log(addFive(15)) */
+
+</script>
+
+
 </body>
 </html>
