--- a/super/DOM/09-dom-project.html
+++ b/super/DOM/09-dom-project.html
@@ -92,9 +92,10 @@ class="js-cost-input" onkeydown="handleKeydown(event);"
 <button onclick="headsTails('Tails')">Tails</button>
 <p class="js-choice"></p>
 
-9d. Create a textbox(input) and a submit button. When clicking submit display "Your name is: "name";  
+9d. Create a textbox(input) and a submit button. When clicking submit display "Your name is: "name"; 
+Also whenever you type in the text box, update the page. 
 
-<input type="name"class="js-input-button" placeholder="Name" onkeydown=handleNamedown(event)>
+<input type="name"class="js-input-button" placeholder="Name" onkeyup=handleNameup(event)>
 
 <button class="js-submit" onclick="nameText()">Submit</button>
 
@@ -123,8 +124,10 @@ function headsTails(move){
 // Input and Submit button 
 function nameText(){
     // get the input button
-    const inputBt = document.querySelector('.js-input-button');
-let nameTag = inputBt.value ;
+    const inputBt =document.querySelector('.js-input-button')
+    let nameTag = inputBt.value ;
+    
+    // only accept the strings no numbers09
 console.log(nameTag)
 // get and display the  paragraph:
 document.querySelector('.js-display-name').innerHTML = `Your name is:${nameTag}`
@@ -132,7 +135,7 @@ document.querySelector('.js-display-name').innerHTML = `Your name is:${nameTag}`
 }
 
 // handle the keydown
-function handleNamedown(event){
+function handleNameup(event){
    if(event.key ==='Enter'){
     nameText()
    }
