--- a/super/DOM/09-dom-project.html
+++ b/super/DOM/09-dom-project.html
@@ -100,6 +100,19 @@ Also whenever you type in the text box, update the page.
 <button class="js-submit" onclick="nameText()">Submit</button>
 
 <p class = "js-display-name"></p>
+
+<!-- Key on / Input -->
+ 9h. When you type in the text box, it updates the text on the page
+
+ <input  id="up" type="text" class="js-key-up" onkeyup="handleKey(event)">
+
+ <p class="p-up"></p>
+
+9i. Improve cart quantity: add a paragraph to display the quantity. When we updated the quantity, also display the quantity when page first loads 
+
+9j. We'll improve the calculator project. 
+- Make a copy of excise 8h(calculator), when we update calculation, display it on the page instead of in the console. 
+- When page loads, if a calculation exist in local storage, display it on the page.47
 </p>
 
  
