update DOM-ALICE folder

--- a/DOM-ALICE/alice.html
+++ b/DOM-ALICE/alice.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HappyBirthday</title>
+    <title>Birthday</title>
     <link rel="stylesheet" href="./alice.css">
 </head>
 <body>
-<div id="alice">
+<div id="js-main-div">
     <div class="comments">
         <p>Happy Birthday Alice  </p>
     </div>
@@ -18,6 +18,6 @@
 
 -->
 
-<script src="./alice.js"></script>
+<!-- <script src="./alice.js"></script> -->
 </body>
 </html>
