--- a/DOM-ALICE/alice.html
+++ b/DOM-ALICE/alice.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="./alice.css">
 </head>
 <body>
-<div id="js-main-div">
+<div id="js-main-div"> 
+    <!-- <h1>Happy Birthday Alice  </h1> -->
+
+    <!-- image -->
+
     <div class="comments">
-        <p>Happy Birthday Alice  </p>
+    
+         <!-- paragraph  -->
+
     </div>
 </div>
 
@@ -18,6 +24,6 @@
 
 -->
 
-<!-- <script src="./alice.js"></script> -->
+<script src="./alice.js"></script>
 </body>
 </html>
