added amazon file

--- a/super/super.html
+++ b/super/super.html
@@ -11,7 +11,14 @@
   <h3>giving instruction to a computer </h3>
 <li>string =  text or anything between single 'sherlyne' or double quotes  "sherlyne", or in backticks `sherlyne`, </li>
 <li><b>template strings</b> are string created by backticks : used in interpolation </li>
-<li>`items (${sherlyne}) Nb insterting value into a string.  </li>
+<li>`items (${sherlyne}) Nb inserting value into a string.  </li>
+
+
+escape characters: 
+"i/'m leaning js"; 
+'/n'= creates a new line: 
+some\ntext; 
+
 
   <!-- DATA TYPES -->
 <h2>VARIABLES AND DATA TYPES </h2>
@@ -277,7 +284,7 @@ true && false = false </p>
 <h2> OBJECTS</h2>
 
 <!-- Javascript code -->
-  <script > 
+  <script src="Lessons.js" > 
     // this are shortcuts for it statements 
     const message = false && `hello`;
     const result = 0? `truthy`:`falsy`;
