--- a/super/Amazon/amazon.html
+++ b/super/Amazon/amazon.html
@@ -3,25 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="amazon.css">
     <title>Amazon</title>
 </head>
 <body>
     <h1>Amazon Cart</h1>
+    <h4>ITEMS IN THE STORE</h4>
+    <!-- Selected Items -->
+     <li>Shoes: <span class ="js-shoe-span"></span></li>
+     <li>Basketball: <span class ="js-basket-span"></span></li>
+     <li>Toaster: <span class ="js-toaster-span"></span></li>
+     <li>T-Shirt: <span class ="js-shirt-span"></span></li>
 
-    // have 2 socks
-const socks = 10.90 
-const basket = 20.90 
-const shipping  = 4.99 
+     <br><br><br>
+    <!-- I want to display the quantity that have pressed on the button  -->
+    <button  class="js-quantity-btn"  onclick="
+    Quantity +=1; 
+    console.log(Quantity)
+    ">Quantity</button>
 
+    <input type="text" class="js-input">
 
+    <h2> Order Summary </h2>
+    <li class="js-items">      </li>
+    <li class="js-ship"></li>
+    <li class="js-before-tax"></li>
+    <li class="js-tax"></li>
+    <hr>
+    <li class="js-total"> </li>
 
+    <button onclick="alert('Your order was made')">Order now</button>
 
+    <button onclick="
+    alert('Added')">Add to Cart</button>
+    
+    <button onclick="
+    console.log('Loading')
+    ">Buy now</button>
 
-
-
-
-
-<script src="amazon.js"></script>
 
 </body>
+<script src="amazon.js" >
+   
+    
+</script>
+
 </html>
