--- a/super/super.html
+++ b/super/super.html
@@ -283,6 +283,10 @@ true && false = false </p>
 
 <h2> OBJECTS</h2>
 
+
+<!-- Questions to ask later: 
+ How to remove the (dots in the li(elements)) -->
+
 <!-- Javascript code -->
   <script src="Lessons.js" > 
     // this are shortcuts for it statements 
