--- a/super/calculator.html
+++ b/super/calculator.html
@@ -130,14 +130,14 @@
 </body>
 
 
-<script> 
+<script src="calculator.js"> 
   // let calculation=0; 
   let calculation = ""; 
   console.log(calculation);
   console.log(document.querySelector('.js-calc').innerHTML =`${calculation}`);
 
 
-  console.log('Why am i so hard to understand the ')
+  console.log('Why')
 
 </script>
 </html>
