--- a/super/calculator.html
+++ b/super/calculator.html
@@ -19,7 +19,7 @@
   <!-- 8 -->
     <button title="8"
     onclick="
-     calculation +='8';
+    calculation +='8';
     console.log(calculation)">8</button>
   
     <!-- 9 -->
@@ -121,6 +121,7 @@
     /*console.log(`Total= ${calculation}*/
     "
     >=</button>
+    <!-- Display the results in  -->
   </p>
 
   <p class="js-calc"></p>
@@ -131,13 +132,5 @@
 
 
 <script src="calculator.js"> 
-  // let calculation=0; 
-  let calculation = ""; 
-  console.log(calculation);
-  console.log(document.querySelector('.js-calc').innerHTML =`${calculation}`);
-
-
-  console.log('Why')
-
 </script>
 </html>
