--- a/super/lesson.html
+++ b/super/lesson.html
@@ -6,18 +6,46 @@
     <title>Document</title>
 </head>
 <body>
-<h1>LESSONS </h1>
+<h1>LESSONS</h1>
 
- <!-- LESSON 4 -->
-  <button>Click</button>
-  <button>Simon</button>
-  <button>Chocolate</button>
+  <!-- LESSON 5 
+   VARIABLES -->
+
+   <h3>Lesson 5/ Calculator
+   </h3>
+  <button title ="1" onclick="
+  calculator+='1';
+
+  console.log(calculator)
+  ">
+  1</button>
   
+  <button title="2" onclick="
+  calculator+='2'
 
+  console.log(calculator)"
+  >2</button>
+  
+  <button title="3" onclick="calculator +='3';
+  console.log(calculator)
+   ">3</button>
+  
+  <button title="+" onclick="
+  calculator+= ' + ';
+  console.log(calculator)
+  ">+</button>
+  
+  <button title="=" class="js-button" onclick="
+  calculators = eval(calculator);
+  console.log(`${calculators}`)
+  ">=</button>
 
-   
+<!--  -->
+  <p class="js-results"></p>
+  
 </body>
-<script src="lesson.js"></script>
+<script src="lessons.js">
+</script>
 </html>
 
 
