update amazon cart

--- a/super/lesson.html
+++ b/super/lesson.html
@@ -42,7 +42,12 @@
 
 <!--  -->
   <p class="js-results"></p>
-  
+
+
+<p><b>Lesson 6</b>
+  <br>
+  Generate a random number: if the number is less that 0.5 display heads, else tails. Create variable of results. if trying to guess, create a variable called guess that equals tails or head.  if guess matches results display 'you win ' else 'you lose'. Instead of if statements, switch it to ternary operator (condition? A:B) </p>
+
 </body>
 <script src="lessons.js">
 </script>
