update amazon cart

--- a/super/activity/amazon.html
+++ b/super/activity/amazon.html
@@ -54,7 +54,10 @@
         Buy now
     </button>
 
-    <p><b>update the items: </b></p>
+    <p><b>update the items: Check the remove cart, before updating the quantity, check if it will go below 0; if it will create a popup saying Not enough items in the cart, and dont update the quantity; 
+
+
+    </b></p>
      <li>Basketball: <span class ="js-basket-span"></span></li>
      <button 
      class="cs-add" title="Add to cart" onclick= 
