upate the functions

--- a/super/lesson.html
+++ b/super/lesson.html
@@ -48,6 +48,27 @@
   <br>
   Generate a random number: if the number is less that 0.5 display heads, else tails. Create variable of results. if trying to guess, create a variable called guess that equals tails or head.  if guess matches results display 'you win ' else 'you lose'. Instead of if statements, switch it to ternary operator (condition? A:B) </p>
 
+
+<!-- Lesson 7  -->
+ <h3>Lesson 7:Functions  </h2>
+
+  <p>Functions:
+    <li><b>Allows us to reuse the code</b></li>
+    <li><b>Allows us to update the function</b></li>
+  <li>We use the camelCase when naming a function. </li>
+    <li>You cannot name your function with special characters such as (%$@"?)</li>
+    <li>Don't name a function (function)</li>
+    <li>You cannot start or name a function with numbers </li>
+
+    Return: <b>Lets us get a value out of a function</b>
+</p>
+<!-- buttons -->
+  <button onclick="playGame('rock')">Rock</button >
+
+  <button onclick="playGame('paper')">Paper</button>
+
+  <button onclick="playGame('scissors')">Scissors</button>
+
 </body>
 <script src="lessons.js">
 </script>
