update the files

--- a/super/activity/ROCK/rock.html
+++ b/super/activity/ROCK/rock.html
@@ -29,12 +29,12 @@ scissor beats paper
  <p>It's You and the Computer</p>
 
     <button onclick="
-    compMove('rock')">Rock</button>
+    playTheGame('rock')">Rock</button>
     
     <button onclick="
-    compMove('paper')">Paper</button>
+    playTheGame('paper')">Paper</button>
     
-    <button onclick="compMove('scissors')">Scissors</button>
+    <button onclick="playTheGame('scissors')">Scissors</button>
 
     <p class="js-results"></p>
 
