--- a/super/lesson.html
+++ b/super/lesson.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LESSONS LEARNT</title>
 </head>
 <body>
 <h1>LESSONS</h1>
+<h3>Lesson 4: html/css/js recap </h3> 
+<p>
+  <button>Click</button>
+  <button>Tiger</button>
+  <button>Pork</button>
+  <p>Hello,world! This is just a recap of the lessons,</p> 
+  <p>Adults Plain Cotton T-shirt</p>
 
-  <!-- LESSON 5 
-   VARIABLES -->
+  <button onclick = "alert('Added')">Add to Cart </button>
+  <button onclick="console.log('Loading...'); alert('Purchased')">Buy now</button>
+</p>
 
-   <h3>Lesson 5/ Calculator
-   </h3>
+<hr>
+<!-- LESSON 5 VARIABLES -->
+  <h3>Lesson 5: Variables and Data Types:</h3>
+
   <button title ="1" onclick="
   calculator+='1';
 
@@ -43,18 +53,22 @@
 <!--  -->
   <p class="js-results"></p>
 
+<hr>
 
-<p><b>Lesson 6</b>
+
+
+
+<p><b>Lesson 6 </b>
   <br>
   Generate a random number: if the number is less that 0.5 display heads, else tails. Create variable of results. if trying to guess, create a variable called guess that equals tails or head.  if guess matches results display 'you win ' else 'you lose'. Instead of if statements, switch it to ternary operator (condition? A:B) </p>
 
-
+<hr>
 <!-- Lesson 7  -->
  <h3>Lesson 7:Functions  </h2>
 
   <p>Functions:
     <li><b>Allows us to reuse the code</b></li>
-    <li><b>Allows us to update the function</b></li>
+    <li><b>Allows us to update the function in the future</b></li>
   <li>We use the camelCase when naming a function. </li>
     <li>You cannot name your function with special characters such as (%$@"?)</li>
     <li>Don't name a function (function)</li>
@@ -62,12 +76,24 @@
 
     Return: <b>Lets us get a value out of a function</b>
 </p>
-<!-- buttons -->
+
+<p>
+  <h3>Rock Paper Scissor Game: </h3>
+  <!-- buttons -->
   <button onclick="playGame('rock')">Rock</button >
 
   <button onclick="playGame('paper')">Paper</button>
 
   <button onclick="playGame('scissors')">Scissors</button>
+
+</p>
+
+<hr>
+
+ <h3>Lesson 8:Objects  </h2>
+  <p>
+
+  </p>
 
 </body>
 <script src="lessons.js">
