--- a/super/super.html
+++ b/super/super.html
@@ -8,23 +8,36 @@
 </head>
 <body>
   <h1> JAVASCRIPT RECAP</h1>
+<h2>LESSON 1-3</h2>
   <h3>giving instruction to a computer </h3>
 <li>string =  text or anything between single 'sherlyne' or double quotes  "sherlyne", or in backticks `sherlyne`, </li>
 <li><b>template strings</b> are string created by backticks : used in interpolation </li>
 <li>`items (${sherlyne}) Nb inserting value into a string.  </li>
 
-
 escape characters: 
 "i/'m leaning js"; 
 '/n'= creates a new line: 
 some\ntext; 
+3 ways of creating string
+<li>'...' = </li>
+<li>"...."</li>
+<li>`....` = template string use of backticks (where you have <b>interpolation)</b></li>
 
+<h2>LESSON 4:  html recap</h2>
+   <h2>Items</h2>
 
-  <!-- DATA TYPES -->
+  <h3> T-shirts</h3>
+   <p>Price: $7.99 </p>
+   <p>shipping and handling = 4.99</p>
+   <p>total before tax:(10%) of the total amount</p> 
+
+   Order total: 
+  <hr>
+
+<h2>LESSON 5:</h2>
 <h2>VARIABLES AND DATA TYPES </h2>
-
-   <h3>VARIABLES</h3>
-   <p>VARIABLES(Identifiers) : this that contain/stores the values. <br>
+  <h3>VARIABLES</h3>
+  <p>VARIABLES(Identifiers) : this that contain/stores the values. <br>
     We use const, let, var to declare a variable. 
    </p> 
    <li> -let : can allows the reassignment of values  eg:  let cat = "rose" </li>
@@ -59,8 +72,8 @@ some\ntext;
     <!-- Variables are written in - camelCase:  
     -->
 
-    
-   <h3>DATA TYPES</h3>
+  <!-- DATA TYPES -->
+ <h3>DATA TYPES</h3>
    <h4>Order of operation/operation precedence= BODMAS </h4>
   brackets of division multiplication addition and subtraction 
    <br>
@@ -87,7 +100,8 @@ some\ntext;
    <li>Null = is the absent of a value </li>
 <br>
 
-<h2>COMPARISON IN JS</h2>
+<hr>
+<h2> LESSON 6: COMPARISON IN JS</h2>
 
 <H3>3. BOOLEANS</H3>
   <p><b>Booleans</b>-checks if the condition/s is true or false</p>
@@ -281,12 +295,11 @@ true && false = false </p>
  of whether it's truthy or falsey) and completes</b>
  
 
-<h2> OBJECTS</h2>
-
-
 <!-- Questions to ask later: 
  How to remove the (dots in the li(elements)) -->
 
+
+ 
 <!-- Javascript code -->
   <script src="Lessons.js" > 
     // this are shortcuts for it statements 
